# Multilingual-TTS

./: .gitignore  0.6B-expressive.sh  0.6B-vc.sh  0.6B.sh  1.7B-adamw-aggresive.sh  1.7B-adamw-constant.sh  1.7B-adamw-linear.sh  1.7B-adamw-old.sh  1.7B-adamw-wsdlr.sh  1.7B-continue.sh  1.7B-expressive.sh  1.7B-muonadamw-wsdlr-v2.sh  1.7B-muonadamw-wsdlr.sh  1.7B-vc.sh  1.7B.sh  4B.sh  README.md  hyperparameter_search.py  hyperparameter_search_extra.py  qwen3_adamw.py  qwen3_muonadamw.py  qwen3_muonadamw_post.py  qwen3_muonadamw_search.py  qwen3_muonadamw_v2.py
Preprint/: preprint.aux  preprint.bbl  preprint.bib  preprint.blg  preprint.fdb_latexmk  preprint.fls  preprint.tex
VC_Evaluation/: Qwen_clone.py  chatterbox_clone.py  languages.json  main.ipynb  pyproject.toml  qwen.py  whisper_transcription.py
dnsmos/: .gitignore  README.md  README_hf.md  dnsmos_hf.py  postprocess.ipynb  setup.sh
gspo/: grpo.ipynb  setup.sh
notebook/: combine-multipacking-tts.ipynb  multipacking-malaysian-chinese-emilia.ipynb
preparation/: 1.multipacking-emilia-yodas.ipynb  3.multipacking-malaysian-emilia.ipynb  4.multipacking-malaysian-tamil-emilia.ipynb  combine-multipacking-expressive.ipynb  combine-multipacking-tts.ipynb  multipacking-emilia-yodas.ipynb  multipacking-expressivetts.ipynb  multipacking-malaysian-chinese-emilia.ipynb  multipacking-malaysian-emilia-dialects.ipynb  multipacking-malaysian-emilia.ipynb  multipacking-malaysian-tamil-emilia.ipynb  multipacking-tts.ipynb
synthetic-description/: README.md  calculate_bins.py  download.sh  process.sh  sampling.py  synthetic.py  (+7 more)
(+31 files in other folders)
