[project]
name = "vc-evaluation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "datasets==4.5.0",
    "huggingface-hub==0.36.2",
    "jiwer==4.0.0",
    "librosa==0.11.0",
    "numpy==1.25.2",
    "soundfile==0.13.1",
    "torch==2.6.0",
    "tqdm==4.67.3",
    "transformers==4.46.3",
]
